[gd_scene load_steps=5 format=2]

[ext_resource path="res://NPCs/EvilBuilder/EvilBuilder.gd" type="Script" id=1]
[ext_resource path="res://NPCs/EvilBuilder/EvilBuilder.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 11 )

[sub_resource type="CircleShape2D" id=2]
radius = 32.0

[node name="EvilBuilder" type="KinematicBody2D"]
collision_layer = 1027
collision_mask = 1027
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 4
hframes = 4

[node name="BlockPlacePosition" type="Position2D" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 3, -5 )
rect = Rect2( -8, -8, 10, 24 )

[node name="RCDetectPlayerLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -256, 0 )
collision_mask = 130175

[node name="RCDetectPlayerRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 256, 0 )
collision_mask = 130175

[node name="RCBlockDetectLeftBottom" type="RayCast2D" parent="."]
position = Vector2( 0, 8 )
enabled = true
cast_to = Vector2( -32, 0 )
collision_mask = 130175

[node name="RCBlockDetectLeftTop" type="RayCast2D" parent="."]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( -32, 0 )
collision_mask = 130175

[node name="RCBlockDetectRightBottom2" type="RayCast2D" parent="."]
position = Vector2( 0, 8 )
enabled = true
cast_to = Vector2( 32, 0 )
collision_mask = 130175

[node name="RCBlockDetectRightTop" type="RayCast2D" parent="."]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( 32, 0 )
collision_mask = 130175

[node name="RCFloorCheckLeft" type="RayCast2D" parent="."]
position = Vector2( -4, 0 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 130175

[node name="RCFloorCheckRight" type="RayCast2D" parent="."]
position = Vector2( 4, 0 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 130175

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
